--- a/Time_Series_Montreal_Fire.ipynb
+++ b/Time_Series_Montreal_Fire.ipynb
@@ -38,6 +38,19 @@
    "source": [
     "df=pd.read_csv('incident_by_grid_name_by_date.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Github commands to add files to Github\n",
+    "git add README.md\n",
+    "git commit -m \"My first commit\"\n",
+    "git branch -M master\n",
+    "git push -u origin master"
+   ]
   }
  ],
  "metadata": {
