--- a/Time_Series_Montreal_Fire.ipynb
+++ b/Time_Series_Montreal_Fire.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "#Github documentation https://thecokerdavid.medium.com/how-to-set-up-github-with-visual-studio-code-817fb30f44e2"
    ]
   },
@@ -245,6 +246,168 @@
    "source": [
     "df['year']= df['DateTime_Out'].dt.year\n",
     "df['month']= df['DateTime_Out'].dt.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subtotals_by_sport = df.groupby(['Key','year','month'])['Sum_Count'].sum().reset_index().assign(Monthly_Sum='Monthly_Sum')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Key</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>Sum_Count</th>\n",
+       "      <th>Monthly_Sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Caserne 03 Grid0_0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Caserne 03 Grid0_0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Caserne 03 Grid0_0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caserne 03 Grid0_0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Caserne 03 Grid0_0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61595</th>\n",
+       "      <td>caserne 47 Grid2_2</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61596</th>\n",
+       "      <td>caserne 47 Grid2_2</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61597</th>\n",
+       "      <td>caserne 47 Grid2_2</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61598</th>\n",
+       "      <td>caserne 47 Grid2_2</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61599</th>\n",
+       "      <td>caserne 47 Grid2_2</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Monthly_Sum</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>61600 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Key  year  month  Sum_Count  Monthly_Sum\n",
+       "0      Caserne 03 Grid0_0  2015      1         13  Monthly_Sum\n",
+       "1      Caserne 03 Grid0_0  2015      2          8  Monthly_Sum\n",
+       "2      Caserne 03 Grid0_0  2015      3         11  Monthly_Sum\n",
+       "3      Caserne 03 Grid0_0  2015      4         21  Monthly_Sum\n",
+       "4      Caserne 03 Grid0_0  2015      5         10  Monthly_Sum\n",
+       "...                   ...   ...    ...        ...          ...\n",
+       "61595  caserne 47 Grid2_2  2022      1          1  Monthly_Sum\n",
+       "61596  caserne 47 Grid2_2  2022      2          2  Monthly_Sum\n",
+       "61597  caserne 47 Grid2_2  2022      4          5  Monthly_Sum\n",
+       "61598  caserne 47 Grid2_2  2022      5          1  Monthly_Sum\n",
+       "61599  caserne 47 Grid2_2  2022      6          1  Monthly_Sum\n",
+       "\n",
+       "[61600 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subtotals_by_sport"
    ]
   }
  ],
